PROD/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx-site-deployment
  namespace: vida-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-nginx-site
  template:
    metadata:
      labels:
        app: demo-nginx-site
    spec:
      containers:
      - name: user-rg-container 
        image: vinul16/demo-repo:v3
        ports:
        - containerPort: 80
      imagePullSecrets: 
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-site-service
  namespace: vida-prod
spec:
  selector:
    app: demo-nginx-site
  ports:
    - port: 8080      #exporce port
      targetPort: 80  #container port
