PROD/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-site-service
  namespace: vida-prod
spec:
  selector:
    app: demo-nginx-site
  ports:
    - port: 8080      #exporce port
      targetPort: 80  #container port
